WebCore:

2008-08-25  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin.

        Bug 20247: setAttributeNode() does not work when attribute name has a capital letter in it
        https://bugs.webkit.org/show_bug.cgi?id=20247

        <rdar://problem/6118218>

        Add a boolean parameter to getAttributeItem to choose between case sensitive and case insensitive
        check. This keeps the behaviour for setAttribute / hasAttribute (case sensitive) and getAttribute
        (case insensitive for HTML elements).

        Test: fast/dom/Element/getAttribute-check-case-sensitivity.html

        * dom/Element.cpp:
        (WebCore::Element::getAttribute):
        * dom/NamedAttrMap.cpp:
        (WebCore::NamedAttrMap::getNamedItem):
        (WebCore::NamedAttrMap::getAttributeItem):
        * dom/NamedAttrMap.h:

LayoutTests:

2008-08-25  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Darin.

        Test case for Bug 20247: setAttributeNode() does not work when attribute name
        has a capital letter in it
        https://bugs.webkit.org/show_bug.cgi?id=20247

        <rdar://problem/6118218>

        Most of this test case was done by Eric Roman <minatoar@gmail.com>, the rest by ap and was
        tweaked by me.

        * fast/dom/Element/getAttribute-check-case-sensitivity-expected.txt: Added.
        * fast/dom/Element/getAttribute-check-case-sensitivity.html: Added.
        * fast/dom/Element/resources/getAttribute-check-case-sensitivity.js: Added.




Canonical link: https://commits.webkit.org/28336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35931 268f45cc-cd09-0410-ab3c-d52691b4dbfc